# rust-identity-service

./: .dockerignore  .env.default  .env.e2e-ci  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dev_realm.json  docker-compose-build.yaml  docker-compose.override.yml  docker-compose.yml  nvim.Dockerfile  test.pem  test2.pem  testpublic.pem  testpublic2.pem
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.e2e.yml  docker-compose.yml  traefik.yaml
.github/workflows/: build-docker-image.yml  ci.yml  playwright.yml
demopage/: Readme.md  callback.html  demo.js  index.html
example/: docker-compose.yml
files/: index.html  sample.js
files/exampleapp/: index.html  sample.js
src/: auth.rs  cors.rs  http.rs  lib.rs  main.rs  monitoring.rs  oidcclient.rs  pool.rs  redis.rs  redis_tests.rs  redisconn.rs  redismock.rs  session.rs  tests.rs
src/auth/: callback.rs  csrftoken.rs  login.rs  logout.rs  mod.rs  oidcclient.rs  refresh.rs  status.rs
src/lib/: cfg.rs  lib.rs  ridser.rs
src/lib/ridser/: tests.rs
tests/: app-health.spec.ts  app-up.spec.ts  conf.ts  helper.ts  package-lock.json  package.json  playwright.config.ts
tests/exampleapp/: login.spec.ts  proxy.spec.ts
tests/probes/: app-health.spec.ts  app-up.spec.ts
tests/root/: root.spec.ts
