[package]
name = "ridser"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
axum-macros = "0.5.0"
base64 = "0.22.1"
chrono = { version = "0.4.24", default-features = false }
cookie = { version = "0.18.1", features = ["private"] }
dotenvy = "0.15.7"
http-body-util = "0.1.2"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["client-legacy"] }
hyper-rustls = "0.27"
oauth2 = "5.0.0-rc.1"
openidconnect = "4.0.0-rc.1"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
time = "0.3.36"
tokio = { version = "1.27.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-sessions = { version = "0.14.0", features = ["private"] }
tower-sessions-redis-store = "0.16.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = { version = "0.5.2", features = ["util"] }
mimalloc = "0.1.43"
rustls = { version = "0.23.15", features = ["ring"] }

[dev-dependencies]
hyper = "1.5.0"
once_cell = "1.20.2"
tracing-log = "0.2.0"
wiremock = "0.6.2"
